	tests/src/algo-test.cc, tests/src/Makefile.am: Added new test,
	algo-test, for testing algorithms defined in
	herdstat/util/algorithm.hh.
	* tests/pkg-test.sh, tests/expected/pkg-dev-nh: Added pkg sub-test for
	testing dev/no-herd.
	* src/action_pkg_handler.cc: Fixed long-time bug that caused
	metadata.xml's with no herds (not even "no-herd") to not be
	interpreted as no-herd.

2005-09-17 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.1_alpha3).
	* src/action_dev_handler.cc: Bail if user is not in herds.xml and not
	in userinfo.xml.
	* herdstat/portage/developer.cc, herdstat/portage/developer.hh,
	herdstat/portage/herd.cc, herdstat/portage/herd.hh,
	herdstat/portage/devaway_xml.cc, herdstat/portage/herds_xml.cc,
	herdstat/portage/metadata_xml.cc, herdstat/portage/userinfo_xml.cc,
	src/action_dev_handler.cc, src/action_herd_handler.cc,
	src/action_meta_handler.cc, src/action_pkg_handler.cc: Having
	Developers/Herd/Herds classes contain pointers ends up making
	everything much more complicated than need be, so I've reverted the
	changes.
	* herdstat/util/functional.hh: Rename to functional.hh for consistency
	with the standard.
	* herdstat/util/algorithm.hh: Add new file for algo definitions.
	Added transform_if() and copy_if().
	* herdstat/portage/functional.hh: Added some generic function objects
	for use with portage-specific code.

2005-09-16 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/portage/project_xml.cc, herdstat/portage/project_xml.hh,
	herdstat/portage/herds_xml.cc: Finishing touches on project_xml class.
	Added a static std::set that keeps track of what's been parsed
	already.  If inserting the path into the set fails, we know we've
	parsed it already and just return.  This mitigates the risk of
	unneeded recursive instantiation (since the project_xml class
	instantiates itself if it finds a <subproject> tag with the 'ref'
	attribute, referencing another projectxml file).