@@ -137,7 +137,7 @@ Away Message: Away till 2005/07/25 due to connection problems
 
 Developer:    Travis Tilley (lv) 
 Email:        lv@gentoo.org 
-Away Message: <jedi mind trick> I'm not really away.</jedi mind trick> 
+Away Message: <jedi mind trick> I'm not really away. </jedi mind trick> 
 
 Developer:    Matthieu Sozeau (mattam) 
 Email:        mattam@gentoo.org 
@@ -164,7 +164,7 @@ Away Message: Slightly limited availability for a few days.
 
 Developer:    Lars Weiler (pylon) 
 Email:        pylon@gentoo.org 
-Away Message: 09/02-09/04 @<a 
+Away Message: 09/02-09/04 @ <a 
               href="http://mrmcd.metarheinmain.de/">mrmcd11b</a> (Darmstadt, 
               Hesse, Germany)  
 
@@ -187,7 +187,7 @@ Developer:    Seemant Kulleen (seemant)
 Email:        seemant@gentoo.org 
 Away Message: In Boston, without dev box. Dev Box arrives in the middle of 
               September, that's when I will return. I don't check mailing lists 
-              or aliases-- I'm on IRC, but better to contact alternate people.  
+              or aliases -- I'm on IRC, but better to contact alternate people.  
 
 Developer:    Jochen Maes (sejo) 
 Email:        sejo@gentoo.org 
