@@ -2,7 +2,7 @@ Developer:    Seemant Kulleen (seemant)
 Email:        seemant@gentoo.org 
 Away Message: In Boston, without dev box. Dev Box arrives in the middle of 
               September, that's when I will return. I don't check mailing lists 
-              or aliases-- I'm on IRC, but better to contact alternate people.  
+              or aliases -- I'm on IRC, but better to contact alternate people.  
 
 Developer:    Jochen Maes (sejo) 
 Email:        sejo@gentoo.org 
