@@ -23,7 +23,7 @@ Email:       seemant@gentoo.org*
 Herds(5):    app-dicts base-system kerberos shell-tools x11 
 Devaway:     In Boston, without dev box. Dev Box arrives in the middle of 
              September, that's when I will return. I don't check mailing lists 
-             or aliases-- I'm on IRC, but better to contact alternate people.  
+             or aliases -- I'm on IRC, but better to contact alternate people.  
 
 Developer:   Jochen Maes (sejo) 
 Email:       sejo@gentoo.org* 
