@@ -27,17 +27,17 @@ josejx: Moved to Pittsburgh, I'll be hard to reach for the next few days until a
 krispykringle: Finishing classes -> going to Redmond. I'm "around," but forbidden, by way of employment contract, from working on Gentoo very much.
 lewk: Working for Red Hat in Boston for the summer. I'll be around, but not very active.
 luckyduck: Away till 2005/07/25 due to connection problems
-lv: <jedi mind trick> I'm not really away.</jedi mind trick>
+lv: <jedi mind trick> I'm not really away. </jedi mind trick>
 mattam: Hollidays then summer school from 15 'till 27 augut. Always working on mymaster's thesis, so don't expect much responsivness.
 mcummings: I am currently on sabatical from Gentoo and shall return in a few months time. [ 16/08/05 ]
 nerdboy: Really away to Canada and Finland until 24 August. Please poke KingTaco or
 pclouds: Moving to Japan
 plasmaroo: Slightly limited availability for a few days.
-pylon: 09/02-09/04 @<a href="http://mrmcd.metarheinmain.de/">mrmcd11b</a> (Darmstadt, Hesse, Germany)
+pylon: 09/02-09/04 @ <a href="http://mrmcd.metarheinmain.de/">mrmcd11b</a> (Darmstadt, Hesse, Germany)
 r2d2: Away until the week of September 6th. Will be 'around' if needed until sept. then no access till I'm back.
 rac: Overwhelmed by company work currently
 rajiv: visiting los angeles until wed sep 7. any devs want to meet to chat and sign keys? i will be checking email but will not be on irc.
-seemant: In Boston, without dev box. Dev Box arrives in the middle of September, that's when I will return. I don't check mailing lists or aliases-- I'm on IRC, but better to contact alternate people.
+seemant: In Boston, without dev box. Dev Box arrives in the middle of September, that's when I will return. I don't check mailing lists or aliases -- I'm on IRC, but better to contact alternate people.
 sejo: no internet due to moving, normally 12/09 back internet :(
 slarti: Gone till 1 Aug, then gone again on the 4 Aug till 22 Aug (roughly). No mail, irc or net at all. Recruiters -> #gentoo-devrel, net-mail -> #gentoo-netmail. spb has my phone if it's life threatening, but it won't be.
 smithj: my laptop's motherboard fried... NEVER BUY A DELL!!! in any case, any dev can fix anything normally maintained by me. i hope to be back within a week or two, but who knows?
@@ -51,4 +51,4 @@ vorlon: busy with work and personal stuff; hope to have more time mid september 
 xmerlin: On holidays from Monday, August 15th for about a week.
 zx: Half-time now. Working on a book.
 
-lv - <jedi mind trick> I'm not really away.</jedi mind trick>
+lv - <jedi mind trick> I'm not really away. </jedi mind trick>
